checkbox spacing fixed

--- a/style.css
+++ b/style.css
@@ -192,6 +192,10 @@ input[type="checkbox"] {
   cursor: pointer;
 }
 
+#network-trolls {
+  margin-top: 10px;
+}
+
 #network-count {
   width: 40px;
 }
